corrected overflow-x issue with smaller h1 in nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,9 @@ footer {
     }
   }
   @media screen and (max-width: 614px) {
+    header h1 {
+        font-size: medium;
+    }
     .work-row {
         flex-wrap: wrap;
         gap: 5px;
